--- a/views/sueldos/vista_previa.html
+++ b/views/sueldos/vista_previa.html
@@ -155,7 +155,7 @@
             </div>
                  <label for="campo_fechaegr" class="col-sm-1 control-label">Imagen</label>
             <div class="col-sm-1">
-                    <img src="{{=URL('adminwebpro','default', 'download', args=recordset.image)}}" > 
+                    <img src="{{=URL('default', 'download', args=recordset.image)}}" >
             </div>
                  <label for="campo_fechaegr" class="col-sm-1 control-label">Libreta Familia</label>
             <div class="col-sm-1">
