--- a/views/sueldos/familiar2.html
+++ b/views/sueldos/familiar2.html
@@ -1,82 +1,52 @@
 {{extend 'layout.html'}}
 <h1>Registrar Familiar</h1>
-
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="familiar2")}}" enctype="multipart/form-data" method="POST">
-
-  <div class="form-group">
-            <label for="campo_obra-social" class="col-sm-2 control-label">Obra Social</label>
-            <div class="col-sm-1">
-                {{=form.custom.widget.obra_social}}
-            </div>
-          </div>
-     <div class="form-group">
-            <label for="campo_cuil" class="col-sm-2 control-label">Domicilio Calle</label>
+{{=form.custom.begin}}
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Domicilio Piso</label>
             <div class="col-sm-2">
-                {{=form.custom.widget.domicilio_calle}}
-            </div>
-            <label for="campo_dni" class="col-sm-1 control-label">Nro</label>
-            <div class="col-sm-1">
-               {{=form.custom.widget.domicilio_numero}}
-            </div>
-           <label for="campo_cextra" class="col-sm-1 control-label">Piso</label>
-            <div class="col-sm-1">
                 {{=form.custom.widget.domicilio_piso}}
-            
+            </div>
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Domicilio depto</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.domicilio_depto}}
+            </div>
           </div>
-           <label for="campo_cextra" class="col-sm-1 control-label">Depto</label>
-            <div class="col-sm-1">
-                 {{=form.custom.widget.domicilio_depto}}
-         </div>
-            
-           
-           <label for="campo_cextra" class="col-sm-1 control-label">Codigo Postal</label>
-            <div class="col-sm-1">
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Codigo postal</label>
+            <div class="col-sm-2">
                 {{=form.custom.widget.codigo_postal}}
             </div>
-     </div>
-    
-     <div class="form-group">
-            <label for="campo_fenac1" class="col-sm-2 control-label">Localidad</label>
-            <div class="col-sm-3">
-                 {{=form.custom.widget.localidad}}
-            </div>
-            <label for="campo_lugnac" class="col-sm-2 control-label">Email </label>
-            <div class="col-sm-3">
-                 {{=form.custom.widget.email}}
-            </div>
-          </div>
-    
-    <div class="form-group">
-            <label for="campo_fenac1" class="col-sm-2 control-label">Telefono</label>
-            <div class="col-sm-3">
-                 {{=form.custom.widget.telefono}}
-            </div>
-            <label for="campo_lugnac" class="col-sm-2 control-label">Celular </label>
-            <div class="col-sm-3">
-                 {{=form.custom.widget.celular}}
-            </div>
-          </div>
-    
-    <div class="form-group">
-            <label for="campo_fenac1" class="col-sm-2 control-label">Estudia</label>
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Localidad</label>
             <div class="col-sm-2">
-                <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                          
-               </select>
+                {{=form.custom.widget.localidad}}
             </div>
-    </div>
-
- <div class="form-group">
-     <div class="col-sm-offset-1 col-sm-11">
-</table>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="familiar")}}" enctype="multipart/form-data" method="POST">
-      <button type="submit" class="btn btn-default">Volver</button>
-       
-  </div>
+          </div>
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Correo Electronico</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.email}}
+            </div>
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Telefono</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.telefono}}
+            </div>
+          </div>
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Celular</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.celular}}
+            </div>
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Estudia</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.estudia}}
+            </div>
+          </div>
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Parentezco</label>
+            <div class="col-sm-2">
+                {{=form.custom.widget.parentezco}}
+            </div>
+          </div>
+ {{=form.custom.submit}}
 </div>
-    <center>
-    <button class="btn btn-default" type="submit">Guardar</button>
-         {{=form.custom.widget.submit}}
-    </center>
+{{=form.custom.end}}
