--- a/views/sueldos/reportes_horas.html
+++ b/views/sueldos/reportes_horas.html
@@ -3,7 +3,7 @@
 <table class="table">
     <caption>{{=titulo}}</caption>
     <thead>
-        <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>Horas Trabajadas</th> </tr> 
+        <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombres</th> <th>Horas Trabajadas</th> </tr> 
     </thead>
         <tbody>
             {{for i, reg_empleado in enumerate(lista_horas):}}
