--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -48,7 +48,12 @@
                       {{=form.custom.widget.curriculum_empleado}}
             </div>
     </div>
-
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">imagen</label>
+            <div class="col-sm-4">
+                {{=form.custom.widget.imagen}}
+            </div>
+    </div>
 <div class="form-group row">
     <div class=" col-sm-offset-1  col-sm-2">
     
