--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -49,22 +49,10 @@
             </div>
     </div>
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-2 control-label">imagen</label>
-            <div class="col-sm-4">
-                {{=form.custom.widget.imagen}}
+     <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
+  </div>
             </div>
-    </div>
-<div class="form-group row">
-    <div class=" col-sm-offset-1  col-sm-2">
-    
-      <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
-    
-    </div>
-     <div class="col-sm-2">
-
-      <button type="submit" class="btn btn-default">guardar</button>
-             {{=form.custom.widget.submit}}
-     </div>
-    
+              <center>    <button type="submit" class="btn btn-default">guardar</button>    </center>
+</div>
 </div>
 {{=form.custom.end}}
