se corrige imagen en vista previa

--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -47,7 +47,13 @@
             <div class="col-sm-3">
                       {{=form.custom.widget.curriculum_empleado}}
             </div>
-    </div>
+    <div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">imagen</label>
+            <div class="col-sm-4">
+                {{=form.custom.widget.image}}
+            </div>
+   
+    </div> 
 <div class="form-group row">
      <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
   </div>
