--- a/views/sueldos/vista_previa_familiar.html
+++ b/views/sueldos/vista_previa_familiar.html
@@ -43,19 +43,19 @@
                 {{=recordset.domicilio_numero}}
                 
             </div>
-                   <label for="campo_fechaegr" class="col-sm-1 control-label">Domicilio Calle</label>
+                   <label for="campo_fechaegr" class="col-sm-1 control-label"> Calle</label>
             <div class="col-sm-1">
                 {{=recordset.domicilio_calle}}
                 
             </div> 
-                    <label for="campo_fechaegr" class="col-sm-1 control-label">Domicilio Piso</label>
+                    <label for="campo_fechaegr" class="col-sm-1 control-label">Piso</label>
             <div class="col-sm-1">
                 {{=recordset.domicilio_piso}}
                 
             </div>
           </div>
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-1 control-label">Domicilio_Depto</label>
+            <label for="campo_nrolegajo" class="col-sm-1 control-label">Depto</label>
             <div class="col-sm-1">
                {{=recordset.domicilio_depto}}
             </div>
